fjernet første del av readme